gcc/testsuite/rust/rustc/ui/error-codes/E0606.rs
fn main() {
    &0u8 as u8; // { dg-error ".E0606." "" { target *-*-* } }
}

